# todo-list-cli

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: cli.rs  commands.rs  database.rs  main.rs  utils.rs
