[package]
name = "todo-list"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.x86_64-unknown-linux-gnu]
os = "linux"
cpu = "x86_64"
features = ["lzma", "zlib"]

[target.x86_64-pc-windows-msvc]
os = "windows"
cpu = "x86_64"
features = ["windows-crt"]

[target.x86_64-apple-darwin]
os = "macos"
cpu = "x86_64"
features = ["apple-security"]

[dependencies]
clap = { version = "3.0", features = ["derive"] }
dirs = "5.0.1"
